added basic html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-more coming soonnnnnnn
+
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8"/>
+        <title>hi there</title>
+    </head>
+
+    <body>
+        <h1>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h1>
+        <p>heyyyyyyyy</p>
+    </body>
+</html>
