--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>hi there</title>
     </head>
 
     <body>
+        <header>
+            <nav>
+                <ul>
+                    <a href="page2.html">new page</a>
+                </ul>
+            </nav>
+        </header>
         <h1>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h1>
         <p>heyyyyyyyy</p>
     </body>
