--- a/page2.html
+++ b/page2.html
@@ -7,6 +7,13 @@
         <title>Page 2</title>
     </head>
     <body>
-        
+        <header>
+            <nav>
+                <ul>
+                    <a href="index.html">home</a>
+                </ul>
+            </nav>
+        </header>
+        <p>lol hi</p>
     </body>
 </html>
