--- a/index.html
+++ b/index.html
@@ -2,21 +2,70 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+            body {background-color: #2F3136;}
+            h1 {
+                color: #2e94d8;
+                text-align: center;
+                font-family: Quicksand;
+                font-size: 50px;
+            }
+            p {
+                color: #f2f2f2;
+                margin-top: 100px;
+                margin-left: 20%;
+                font-family: Calibri;
+                font-size: 18px;
+            }
+
+            .topnav {
+                position: relative;
+                background-color: #333;
+                overflow: hidden;
+                position: relative;
+                float: none;
+                position: absolute;
+                top: auto;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+            .topnav a {
+                float: left;
+                color: #f2f2f2;
+                text-align: center;
+                padding: 14px 16px;
+                text-decoration: none;
+                font-size: 18px;
+                font-family: Calibri;
+            }
+            .topnav a:hover {
+                background-color: #ddd;
+                color: black;
+            }
+            .topnav a.active {
+                background-color: #2e94d8;;
+                color: white;
+            }
+        </style>
+
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>hi there</title>
+        <title>11 Chemistry Notes</title>
     </head>
 
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <a href="page2.html">new page</a>
-                </ul>
-            </nav>
-        </header>
-        <h1>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</h1>
+        <h1>SCH3U Notes</h1>
+
+        <div class="topnav">
+            <a class="active" href="index.html">Home</a>
+            <a href="unit1.html">Unit 1</a>
+            <a href="unit2.html">Unit 2</a>
+            <a href="unit3.html">Unit 3</a>
+            <a href="unit4.html">Unit 4</a>
+        </div>
+
         <p>heyyyyyyyy</p>
     </body>
 </html>
