changed  description in home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             p {
                 color: #f2f2f2;
                 margin-top: 100px;
-                margin-left: 20%;
+                text-align: center;
                 font-family: Calibri;
                 font-size: 18px;
             }
@@ -66,6 +66,6 @@
             <a href="unit4.html">Unit 4</a>
         </div>
 
-        <p>heyyyyyyyy</p>
+        <p>Welcome! Here you'll find all of the necessary links to study for 11 Chemistry.</p>
     </body>
 </html>
