--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             }
             p {
                 color: #f2f2f2;
-                margin-top: 100px;
+                margin-top: 200px;
                 text-align: center;
                 font-family: Calibri;
                 font-size: 18px;
@@ -26,7 +26,7 @@
                 position: relative;
                 float: none;
                 position: absolute;
-                top: auto;
+                top: 250px;
                 left: 50%;
                 transform: translate(-50%, -50%);
             }
@@ -47,6 +47,19 @@
                 background-color: #2e94d8;;
                 color: white;
             }
+            @media screen and (max-width: 600px) {
+                .topnav a, .topnav-right {
+                    float: none;
+                    display: block;
+                }
+
+                .topnav-centered a {
+                    position: relative;
+                    top: 0;
+                    left: 0;
+                    transform: none;
+                }
+            }
         </style>
 
         <meta charset="utf-8"/>
@@ -65,7 +78,5 @@
             <a href="unit3.html">Unit 3</a>
             <a href="unit4.html">Unit 4</a>
         </div>
-
-        <p>Welcome! Here you'll find all of the necessary links to study for 11 Chemistry.</p>
     </body>
 </html>
