updated links and added other

--- a/other.html
+++ b/other.html
@@ -53,7 +53,8 @@
                 text-align: left;
                 font-family: Calibri;
                 font-size: 24px;
-                text-align: center;
+                margin-left: 200px;
+                margin-top: 50px;
             }
             .bodytext a {
                 color: white;
@@ -66,23 +67,23 @@
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>11 Chemistry Notes</title>
+        <title>Other</title>
     </head>
 
     <body>
         <h1>SCH3U Notes</h1>
 
         <div class="topnav">
-            <a class="active" href="index.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="unit1.html" target="_blank">Unit 1</a>
             <a href="unit2.html" target="_blank">Unit 2</a>
             <a href="unit3.html" target="_blank">Unit 3</a>
             <a href="unit4.html" target="_blank">Unit 4</a>
-            <a href="other.html">Other</a>
+            <a class="active" href="other.html">Other</a>
         </div>
 
         <div class="bodytext">
-            <p>Welcome! Here you'll find all of the necessary notes to study for 11 Chemistry.</p>
+            <a href="https://docs.google.com/document/d/1hQNo_0P4bJUuBfSa8ABxw7XAKSurRE7_/edit?usp=sharing&ouid=115467291669786998875&rtpof=true&sd=true" target="_blank">How to Write a Lab Report</a>
         </div>
     </body>
 </html>
