fixed margin in other.html

--- a/other.html
+++ b/other.html
@@ -53,7 +53,7 @@
                 text-align: left;
                 font-family: Calibri;
                 font-size: 24px;
-                margin-left: 200px;
+                margin-left: 5%;
                 margin-top: 50px;
             }
             .bodytext a {
