--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                 float: none;
                 margin-left: 50px;
                 margin-right: 50px;
-                align-self: center;
             }
             .topnav a {
                 float: left;
@@ -91,6 +90,7 @@
             <a href="unit2.html" target="_blank">Unit 2</a>
             <a href="unit3.html" target="_blank">Unit 3</a>
             <a href="unit4.html" target="_blank">Unit 4</a>
+            <a href="unit5.html" target="_blank">Unit 5</a>
             <a href="other.html">Other</a>
         </div>
 
