--- a/other.html
+++ b/other.html
@@ -92,6 +92,7 @@
             <a href="unit2.html" target="_blank">Unit 2</a>
             <a href="unit3.html" target="_blank">Unit 3</a>
             <a href="unit4.html" target="_blank">Unit 4</a>
+            <a href="unit5.html" target="_blank">Unit 5</a>
             <a class="active" href="other.html">Other</a>
         </div>
 
